// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<I18nProvider> children get i18n from I18nProvider 1`] = `
<TestElement
  i18n={
    Object {
      "gettext": [Function],
      "lang": "en-US",
      "ngettext": [Function],
      "npgettext": [Function],
      "pgettext": [Function],
    }
  }
  testProp="required"
/>
`;

exports[`<I18nProvider> children get i18n from I18nProvider 2`] = `
<I18nProvider
  i18n={
    Object {
      "gettext": [Function],
      "lang": "en-US",
      "ngettext": [Function],
      "npgettext": [Function],
      "pgettext": [Function],
    }
  }
>
  <Translate(TestElement)
    testProp="required"
  >
    <TestElement
      i18n={
        Object {
          "gettext": [Function],
          "lang": "en-US",
          "ngettext": [Function],
          "npgettext": [Function],
          "pgettext": [Function],
        }
      }
      testProp="required"
    >
      <div>
        Test
      </div>
    </TestElement>
  </Translate(TestElement)>
</I18nProvider>
`;

exports[`translate Component render translated component 1`] = `
<Translate(TestElement)
  i18n={
    Object {
      "gettext": [Function],
      "lang": "en-US",
      "ngettext": [Function],
      "npgettext": [Function],
      "pgettext": [Function],
    }
  }
  testProp="required"
>
  <TestElement
    i18n={
      Object {
        "gettext": [Function],
        "lang": "en-US",
        "ngettext": [Function],
        "npgettext": [Function],
        "pgettext": [Function],
      }
    }
    testProp="required"
  >
    <div>
      Test
    </div>
  </TestElement>
</Translate(TestElement)>
`;

exports[`translate Component render translated stateless component 1`] = `
<Translate(StatelessTest)
  i18n={
    Object {
      "gettext": [Function],
      "lang": "en-US",
      "ngettext": [Function],
      "npgettext": [Function],
      "pgettext": [Function],
    }
  }
  testProp="required"
>
  <StatelessTest
    i18n={
      Object {
        "gettext": [Function],
        "lang": "en-US",
        "ngettext": [Function],
        "npgettext": [Function],
        "pgettext": [Function],
      }
    }
    testProp="required"
  >
    <div>
      My
      required
    </div>
  </StatelessTest>
</Translate(StatelessTest)>
`;
